syntax = "proto3";

message HNSWGraphNode {
    string id = 1;
    repeated float vector = 2;
    int32 level = 3;
    repeated string neighbors = 4;
}

message HNSWGraph {
    string entrypoint_id = 1;
    int32 max_level = 2;
    string similarity_metric = 3;
    int32 dimensions = 4;
    int32 m = 5;
    int32 ef = 6;
    repeated HNSWGraphNode nodes = 7;
}
